<resources>
    <string name="app_name">Act3</string>
    <string name="action_settings">Settings</string>
    <string name="action_buscar">Buscar</string>
    <string name="action_nuevo">Nuevo</string>
    <string name="action_adiccional1">Adicional1</string>
    <string name="action_adiccional2">Adicional2</string>
    <string name="action_adiccional3">Adicional3</string>
    <string name="fragment1">fragment1</string>
    <string name="fragment2">fragment2</string>
</resources>
