<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jdcasas.lab_6_1act3.MainActivity">
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item android:id="@+id/action_buscar"
        android:title="@string/action_buscar"
        android:icon="@drawable/ic_menu_save"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_nuevo"
        android:title="@string/action_nuevo"
        android:icon="@drawable/ic_menu_add"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText" />
    <item android:id="@+id/action_add1"
        android:title="@string/action_adiccional1"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_add2"
        android:title="@string/action_adiccional2"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_add3"
        android:title="@string/action_adiccional3"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
